Reverted NIO FS changes. This returns us to the state of things circa 6480 w/r/t to archive I/O.
git-svn-id: https://svn.code.sf.net/p/vassalengine/svn/VASSAL-src/trunk@7190 67b53d14-2c14-4ace-a08f-0dab2b34000c